--- a/css/course_read.css
+++ b/css/course_read.css
@@ -1,8 +1,5 @@
 /* Header */
 
-.header {
-    background-color: rgb(219, 233, 233);
-}
 
 .navhaut {
     background-color: rgb(22, 108, 165);
@@ -59,56 +56,76 @@
     justify-content: center;
     list-style: none;
     padding: 10px;
+    box-shadow: 0px 15px 10px -15px #111;    
 }
 
 .navbas li{
     margin-right: 50px;
 }
+
 /* Main*/
 
+
 .main {
-    position:relative;
-    left:30%;
-    width:35%;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
+    margin: 0 auto;
+    width:60%; display: flex;
+    background-color: aqua;
+    flex-direction: column;
     margin-top: 20px;
     padding:30px;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
 
 }
 
-.elm{
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    border-radius: 15px;
-    background-color: white;
-    margin: 5px;
-    padding: 10px;
-}
+/* This is purely for the demo */
+.video_container {
+   width: 100%;
+  }
 
-.elm p {
+  .video_container ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+   }
+
+.lecon_active {
+    color: red;
+}
+   .video_container ul li {
+margin-right: 20px;
+font-weight: bold;
+font-size: 25px;
+     }
+  #video {
     width: 100%;
+  }
+ 
+/* aside */
+
+.leftside {
+    position: absolute;
+    top: 145px;
+    left:4%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.imgbox {
-    width:100%;
+.lefside_ul1 {
+    list-style: none;
+    border-bottom: 1px solid rgb(214, 194, 194);
+}
+.lefside_ul2 {
+    list-style: none;
 }
 
-.rightSide_container {
-    width: 25%;
-    background-color: blue;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    margin: -0.5rem;
+.leftside ul li{
+    margin: 20px;
 }
 
-.rightSide_box {
-    margin: 0.5rem;
-    background: #f4f4f8;
-    border: 3px solid #b59214;
-    color: #b59214;
-    padding: 3rem;
-    font-size: 2rem;
+.leftside ul li span {
+    padding: 5px;
+}
+
+.leftside h4 {
     text-align: center;
 }
