--- a/nextclass/blog/templates/blog/about.html
+++ b/nextclass/blog/templates/blog/about.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
+
+    {% block content %}
     <h1>Who are we?</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem numquam exercitationem veniam delectus deleniti. 
         Iure sed neque iste totam sint cumque quo, ex fugit magnam labore magni natus sunt ratione.</p>
-</body>
-</html>
+        {% endblock content %}
