--- a/nextclass/blog/templates/blog/home.html
+++ b/nextclass/blog/templates/blog/home.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
+
+    {% block content %}
+    
     <h1>Bienvenue sur Nextcourse</h1>
     <hr>
     {% for post in posts  %}
@@ -15,5 +10,5 @@
     <p>{{ post.content }}</p>
     
     {% endfor %}
-</body>
-</html>
+    {% endblock content %}
+   
